--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,6 +15,7 @@
     </head>
     <body>
     <div class="Page-header">
+		<a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glynhicon glyphicon-plus"></span></a>	
 		<h1><a href="/">Django Girls Blog</a></h1>
 	</div>
 		<div class="content container">
